<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintStart_toEndOf="@+id/include2"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar_systems_equations"
        android:layout_width="wrap_content"
        android:layout_height="567dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIncSearch6"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_activity_gauss_elim"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnBisection2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <Button
        android:id="@+id/btnBisection2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_gauss_gpp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnFalseRule2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/btnFalseRule2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_gauss_gtp"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnFixedPoint2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/btnFixedPoint2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_cholesky"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnNewton2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <Button
        android:id="@+id/btnNewton2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_crout"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSecant2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <Button
        android:id="@+id/btnSecant2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_doolittle"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnMultRoots2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.831" />

    <Button
        android:id="@+id/btnMultRoots2"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_gauss_seidel"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />

    <Button
        android:id="@+id/btnMultRoots3"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/title_jacobi"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
